
--------------------------------------------------------------------------------
fetchmail 6.4.0 (not yet released):

# MAJOR INCOMPATIBLE CHANGES
* Support for POP2 was removed, as announced in 6.3.0.  Matthias Andree.
* Support for build environments without stdarg.h support was removed, varargs.h
  support was effectively disabled since 6.0.0 or earlier.  Matthias Andree

# OTHER CHANGES
* RFC-2060 -> RFC-3501.  Sunil Shetye.
* When storing flags, use +FLAGS.SILENT on IMAP4rev1, too, not just IMAP4.
  6.3.X had falsely assumed only IMAP4 supported SILENT.  Sunil Shetye.

--------------------------------------------------------------------------------

fetchmail 6.3.1 (not yet released):

# OBSOLETION WARNINGS
* The multidrop To/Cc guessing code along with the fragile duplicate suppressor
  is deprecated and may be removed from a future release. (MA)

# USER-VISIBLE CHANGES
* Fix broken default port in POP2. Patch by Stanislav Brabec, SUSE [CZ]. (MA)
* Fix manual page, some lines starting with ' were escaped by \&.
  Reported by Simon Barner. (MA)
* Ship with gettext-0.14.3 again, as 6.2.9-rc10 did. Found by Sunil Shetye. (MA)
* Actually set default SSL certificate path if --sslcertpath is unset.
  Reported by Heino Tiedemann and Rob MacGregor. (MA)
* Remove bogus Netscape IMAP4rev1 Service >= 3.6 warning about BODY[TEXT]
  that we are not using. Patch by Sunil Shetye. (MA)
* Plug potential memory and socket leak when polling multiple folders or when
  the upstream sends bogus message sizes.  Patch by Sunil Shetye. (MA)
* Fix segfault (null pointer dereference) in multidrop mode with headerless
  email.  Reported by Daniel Drake, patch by Sunil Shetye. (MA)
* Update Catalan translation, by Ernest Adrogué Calveras. (MA)
* Fix segfault (null pointer dereference) on some operating systems with
  fetchmail's obsolete DNS MX/host alias lookups in multidrop mode.
  Patch by Dr.-Ing. Andreas Haakh. (MA)

fetchmail 6.3.0 (released 2005-11-30):
